New * product and productAttribute table * add foreign key
Modify
* company  model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/chunkaigao/Line Project/shangyao/env/bin/python3.9"
+    "python.pythonPath": "env/bin/python"
 }
