* Catch all routes for flask (https://stackoverflow.com/questions/45777770/catch-all-routes-for-flask)
* Set flask DEBUG=TRUE even in development env. Without setting this, flask app would get 405 error when serving POST request.

* Modify Vue uri and add dev proxy.

* Using flask blueprint for building server api

--- a/server/.dev.env
+++ b/server/.dev.env
@@ -1,6 +1,6 @@
 # Base flask
-DEBUG = True
-DEVELOPMENT = True
+DEBUG = FALSE  # If not set FALSE, Flask app can't send POST request...
+DEVELOPMENT = FALSE
 HOST = 'localhost'
 PORT = '8000'
 
